--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-amplitude-analytics": "^2.0.0",
     "gatsby-plugin-flow": "^1.3.5",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-plausible": "^0.0.7",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gh-pages": "^3.0.0",
     "react": "^16.12.0",
